/*
 * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
 * or more contributor license agreements. Licensed under the Elastic License
 * 2.0 and the Server Side Public License, v 1; you may not use this file except
 * in compliance with, at your election, the Elastic License 2.0 or the Server
 * Side Public License, v 1.
 */

import React from 'react';
import { shallow } from 'enzyme';
import { KibanaPageLayout } from './page_layout';

describe('KibanaPageLayout', () => {
  test('render basic template', () => {});

  test('render default empty prompt', () => {});

  test('render custom empty prompt', () => {});
});
